--- a/style.css
+++ b/style.css
@@ -41,4 +41,32 @@ body{
     font-size: 15px;
   }
 }
+#hero-heading {
+  font-size: 50px; 
+  padding-left: 1rem; 
+  font-weight: 700;
+}
+
+@media (min-width: 768px) { 
+  #hero-heading {
+    font-size: 100px;
+    padding-left: 3rem; 
+  }
+}
+
+@media (min-width: 992px) { 
+  #hero-heading {
+    font-size: 120px;
+    padding-left: 3rem;
+  }
+}
+
+#herobutton1{
+   background: linear-gradient(to right, #0147FF, #0147FF00);
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
 
