--- a/style.css
+++ b/style.css
@@ -4,10 +4,56 @@ body{
      box-sizing: border-box;
 }
 
+#hero-heading {
+  font-size: 50px; 
+  padding-left: 1rem; 
+  font-weight: 700;
+}
+#herobutton1{
+   background: linear-gradient(to right, #0147FF, #0147FF00);
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
+#imgicon1{
+  width: 65px; 
+  height: 65px; 
+  position: absolute; 
+  left: 30px; 
+  top: 350px;
+}
+#imgicon2{
+  width: 65px; 
+  height: 65px; 
+  position: absolute; 
+  left: 60px; 
+  top: 350px;
+}
+#imgicon3{
+  width: 65px; 
+  height: 65px; 
+  position: absolute; 
+  left: 90px; 
+  top: 350px;
+}
+#imgicon4{
+  width: 65px; 
+  height: 65px; 
+  position: absolute; 
+  left: 120px; 
+  top: 350px;
+}
+#bttn1{
+  position: absolute;
+  right: 50px; 
+  top: 350px;
+}
 
 
 #timer {
-  font-size: 60px; 
+  font-size: 50px; 
   padding-left: 1rem; 
   font-weight: 700;
 }
@@ -41,11 +87,7 @@ body{
     font-size: 15px;
   }
 }
-#hero-heading {
-  font-size: 50px; 
-  padding-left: 1rem; 
-  font-weight: 700;
-}
+
 
 @media (min-width: 768px) { 
   #hero-heading {
@@ -59,15 +101,6 @@ body{
     font-size: 120px;
     padding-left: 3rem;
   }
-}
-
-#herobutton1{
-   background: linear-gradient(to right, #0147FF, #0147FF00);
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  font-size: 16px;
-  cursor: pointer;
 }
 
 @media (max-width: 500px) { 
@@ -89,6 +122,18 @@ body{
 }
 @media (max-width: 800px) { 
   #imgicon1 {
-    top: 100px;
+    top:400px ;
   }
+   #imgicon2 {
+    top:400px ;
+  }
+   #imgicon3 {
+    top:400px ;
+  }
+   #imgicon4 {
+    top:400px ;
+  }
+  #bttn1{ 
+  top: 480px;
+}
 }
